[라워/생성/야준서] 콜로세움 맵 추가

--- a/LastWarrior/Config/DefaultEngine.ini
+++ b/LastWarrior/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Arena/Maps/Colosseum.Colosseum
+EditorStartupMap=/Game/Arena/Maps/Colosseum.Colosseum
 GlobalDefaultGameMode="/Script/LastWarrior.LastWarriorGameMode"
 
 [/Script/Engine.RendererSettings]
