[라워/캐릭터/야준서] 캐릭터, 게임 모드 생성

--- a/LastWarrior/Config/DefaultEngine.ini
+++ b/LastWarrior/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Arena/Maps/Colosseum.Colosseum
 EditorStartupMap=/Game/Arena/Maps/Colosseum.Colosseum
-GlobalDefaultGameMode="/Script/LastWarrior.LastWarriorGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/BP_LastWarriorGameMode.BP_LastWarriorGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
